<resources>

    <string name="app_name">WordShare</string>

    <string name="nota">Anotações</string>
    <string name="nota_pessoal">Pessoais</string>
    <string name="nota_compartilhada">Compartilhadas</string>

    <string name="menu_caderno_pessoal">Caderno Pessoal</string>
    <string name="menu_caderno_compartilhado">Caderno Compartilhado</string>
    <string name="menu_opções">Opções</string>
    <string name="menu_notas">Anotações</string>
    <string name="menu_anexos">Anexos</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_configurar">Configurações</string>


    <string name="botao_login">Login</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_sobre">Sobre</string>
    <string name="botao_criar">Criar</string>

    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_confirmar_senha">Confirmar a Senha</string>
    <string name="cadastro_feito">Cadastro realizado com sucesso</string>
    <string name="cadastro_erro">Cadastro não realizado</string>

    <string name="nota_titulo">Título</string>
    <string name="nota_subtitulo">Subtítulo</string>
    <string name="nota_conteudo">Escreva aqui...</string>

    <string name="title_activity_menu_deslizante">MenuDeslizante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
